--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 numpy==1.26.2
+openpyxl==3.1.2
 pandas==2.1.3
 Pillow==10.1.0
 pypng==0.20220715.0
